# SynologyCloudflareDDNS

./: README.md  pyproject.toml
synology_cloudflare_ddns/: __main__.py
synology_cloudflare_ddns/dns/: add.py  get.py  update.py  zones.py
synology_cloudflare_ddns/utils/: args.py  logger.py
